# momentGW

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  Changes.patch  D  LICENSE.md  README.md  Uncommitted_changes_before_Checkout_at_14_07_2023,_1_10_pm_[Changes].patch  api.html  benchmark.py  convergence.py  ea  ei  eta_CD  example.py  gen_files.py  genindex.html  index.html  mkdocs.yaml  moment_gw.py  objects.inv  plot.ipynb  plot.py  pre_mom  pre_mom_fin_CD  pre_mom_fin_THC  py-modindex.html  pyproject.toml  rpamoms.py  search.html  searchindex.js  test.py  test_agw.py  vlog.txt  zeta_THC
.doctrees/: api.doctree  index.doctree
.doctrees/api/: modules.doctree  momentGW.doctree  momentGW.pbc.doctree  momentGW.pbc.uhf.doctree  momentGW.uhf.doctree
.github/workflows/: ci.yaml
_modules/: index.html
_modules/momentGW/: base.html  bse.html  energy.html  evgw.html  fock.html  fsgw.html  gw.html  ints.html  logging.html  mpi_helper.html  qsgw.html  rpa.html  scgw.html  tda.html  thc.html  util.html
_modules/rich/: table.html
_sources/: api.rst.txt  index.rst.txt
_sources/api/: modules.rst.txt  momentGW.base.rst.txt  momentGW.bse.rst.txt  momentGW.energy.rst.txt  momentGW.evgw.rst.txt  momentGW.fock.rst.txt  momentGW.fsgw.rst.txt  momentGW.gw.rst.txt  momentGW.ints.rst.txt  momentGW.logging.rst.txt  momentGW.mpi_helper.rst.txt  momentGW.pbc.base.rst.txt  momentGW.pbc.evgw.rst.txt  momentGW.pbc.fock.rst.txt  momentGW.pbc.fsgw.rst.txt  momentGW.pbc.gw.rst.txt  momentGW.pbc.ints.rst.txt  momentGW.pbc.kpts.rst.txt  momentGW.pbc.qsgw.rst.txt  momentGW.pbc.rpa.rst.txt  momentGW.pbc.rst.txt  momentGW.pbc.scgw.rst.txt  momentGW.pbc.tda.rst.txt  momentGW.pbc.thc.rst.txt  momentGW.pbc.uhf.base.rst.txt  momentGW.pbc.uhf.evgw.rst.txt  (+26 more)
api/: modules.html  momentGW.base.html  momentGW.bse.html  momentGW.energy.html  momentGW.evgw.html  momentGW.fock.html  momentGW.fsgw.html  momentGW.gw.html  momentGW.html  momentGW.ints.html  momentGW.logging.html  momentGW.mpi_helper.html  momentGW.pbc.base.html  momentGW.pbc.evgw.html  momentGW.pbc.fock.html  momentGW.pbc.fsgw.html  momentGW.pbc.gw.html  momentGW.pbc.html  momentGW.pbc.ints.html  momentGW.pbc.kpts.html  momentGW.pbc.qsgw.html  momentGW.pbc.rpa.html  momentGW.pbc.scgw.html  momentGW.pbc.tda.html  momentGW.pbc.thc.html  momentGW.pbc.uhf.base.html  momentGW.pbc.uhf.evgw.html  momentGW.pbc.uhf.fock.html  momentGW.pbc.uhf.fsgw.html  momentGW.pbc.uhf.gw.html  momentGW.pbc.uhf.html  momentGW.pbc.uhf.ints.html  momentGW.pbc.uhf.qsgw.html  momentGW.pbc.uhf.scgw.html  momentGW.pbc.uhf.tda.html  momentGW.qsgw.html  momentGW.rpa.html  momentGW.scgw.html  momentGW.tda.html  momentGW.thc.html  (+12 more)
benchmark/: README.md  data.json  sc-data.json
data/: ag0w0_0_df_b3lyp_def2-tzvpp_10028-15-6.chk  ag0w0_0_df_b3lyp_def2-tzvpp_10043-11-5.chk  ag0w0_0_df_b3lyp_def2-tzvpp_106-97-8.chk  ag0w0_0_df_b3lyp_def2-tzvpp_108-95-2.chk  ag0w0_0_df_b3lyp_def2-tzvpp_108-95-2v2.chk  ag0w0_0_df_b3lyp_def2-tzvpp_110-86-1.chk  ag0w0_0_df_b3lyp_def2-tzvpp_12184-80-4.chk  ag0w0_0_df_b3lyp_def2-tzvpp_12185-09-0.chk  ag0w0_0_df_b3lyp_def2-tzvpp_12187-06-3.chk  ag0w0_0_df_b3lyp_def2-tzvpp_12190-70-4.chk  ag0w0_0_df_b3lyp_def2-tzvpp_124-38-9.chk  ag0w0_0_df_b3lyp_def2-tzvpp_1304-56-9.chk  ag0w0_0_df_b3lyp_def2-tzvpp_1309-48-4.chk  ag0w0_0_df_b3lyp_def2-tzvpp_13283-31-3.chk  ag0w0_0_df_b3lyp_def2-tzvpp_1333-74-0.chk  ag0w0_0_df_b3lyp_def2-tzvpp_13768-60-0.chk  ag0w0_0_df_b3lyp_def2-tzvpp_14452-59-6.chk  ag0w0_0_df_b3lyp_def2-tzvpp_1590-87-0.chk  ag0w0_0_df_b3lyp_def2-tzvpp_1603-84-5.chk  ag0w0_0_df_b3lyp_def2-tzvpp_17108-85-9.chk  ag0w0_0_df_b3lyp_def2-tzvpp_17739-47-8.chk  ag0w0_0_df_b3lyp_def2-tzvpp_19287-45-7.chk  ag0w0_0_df_b3lyp_def2-tzvpp_23878-46-8.chk  ag0w0_0_df_b3lyp_def2-tzvpp_25681-79-2.chk  ag0w0_0_df_b3lyp_def2-tzvpp_25681-80-5.chk  ag0w0_0_df_b3lyp_def2-tzvpp_25681-81-6.chk  ag0w0_0_df_b3lyp_def2-tzvpp_302-01-2.chk  ag0w0_0_df_b3lyp_def2-tzvpp_39297-86-4.chk  ag0w0_0_df_b3lyp_def2-tzvpp_39297-88-6.chk  ag0w0_0_df_b3lyp_def2-tzvpp_463-58-1.chk  ag0w0_0_df_b3lyp_def2-tzvpp_50-00-0.chk  ag0w0_0_df_b3lyp_def2-tzvpp_507-25-5.chk  ag0w0_0_df_b3lyp_def2-tzvpp_542-92-7.chk  ag0w0_0_df_b3lyp_def2-tzvpp_544-92-3.chk  ag0w0_0_df_b3lyp_def2-tzvpp_558-13-4.chk  ag0w0_0_df_b3lyp_def2-tzvpp_56-23-5.chk  ag0w0_0_df_b3lyp_def2-tzvpp_57-13-6.chk  ag0w0_0_df_b3lyp_def2-tzvpp_593-60-2.chk  ag0w0_0_df_b3lyp_def2-tzvpp_593-60-2v2.chk  ag0w0_0_df_b3lyp_def2-tzvpp_593-66-8.chk  (+3063 more)
docs/: Makefile  api.rst  conf.py  gen_files.py  index.rst  mkdocs.yaml
examples/: 00-g0w0.py  00-moment_order.py  01-evgw.py  01-polarizability.py  02-scgw.py  02-spin.py  03-qsgw.py  03-solids.py  04-eigenvalue_self_consistency.py  05-full_self_consistency.py  06-quasiparticle_self_consistency.py  06-tda.py  07-THC_tda.py  07-srg_parameter.py  07-tda_THC.py  07-thc_tda.py  08-comparison.py  08-tensor_hypercontraction.py  09-THC_tda_benchmarking.py  09-spectral_functions.py  09-test_THC_calc.py  09-ugw.py  10-srg_qsgw.py  10-unrestricted_spectral_functions.py  11-properties.py  11-srg_qsgw_s_parameter.py  12-custom_hamiltonian.py  13-kpoint_interpolation.py  14-numerical_integration.py  15-compression.py  16-custom_kpoint_hamiltonian.py  17-optical_spectra.py  18-chebyshev_optical_spectra.py  19-frozen.py  20-THC_calcs.py  20-finite_size_corrections.py  20-store_calculation.py  21-communatorics.py  21-thc.py  22-com-take2.py  (+29 more)
momentGW/: __init__.py  base.py  bse.py  energy.py  evgw.py  fock.py  fsgw.py  gf2.py  gw.py  ints.py  logging.py  minimax.py  mpi_helper.py  qsgw.py  rpa.py  scgw.py  tda.py  thc.py  util.py
reference/: index.html
search/: search_index.json
tests/: test_agw.py  test_bse.py  test_evgw.py  test_evkgw.py  test_evkugw.py  test_evugw.py  test_fsgw.py  test_fskgw.py  test_fskugw.py  test_fsugw.py  test_gf2.py  test_gw.py  test_kgw.py  test_kthcgw.py  test_kugw.py  test_qsgw.py  test_qskgw.py  test_qskugw.py  test_qsugw.py  test_scgw.py  test_sckgw.py  test_sckugw.py  test_scugw.py  test_thcgw.py  test_ugf2.py  test_ugw.py  thc_pbc.h5  vlog.txt
(+281 files in other folders)
