[project]
name = "momentGW"
description = "Moment-constrained GW"
keywords = [
    "quantum", "chemistry",
    "electronic", "structure",
    "gw", "theory",
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "Topic :: Scientific/Engineering",
        "Topic :: Software Development",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy>=1.19.0",
    "scipy<=1.10.0",
    "pyscf>=2.0.0",
    "dyson @ git+https://github.com/BoothGroup/dyson@master",
]
dynamic = [
    "version",
]

[tools.setuptools.dynamic]
version = {attr = "momentGW.__version__"}

[build-system]
requires = [
    "setuptools>=46.1.0",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black>=22.6.0",
    "isort>=5.10.1",
    "coverage[toml]",
    "pytest",
    "pytest-cov",
]

[tool.black]
line-length = 100
target-version = [
    "py36",
    "py37",
    "py38",
]
include = "momentGW"
exclude = """
/(
    | momentGW/__pycache__
    | .git
)/
"""

[tool.isort]
atomic = true
profile = "black"
line_length = 100
src_paths = [
    "momentGW",
]
skip_glob = [
    "*/__init__.py",
    "momentGW/__pycache__/*",
]

[tool.coverage.run]
branch = true
source = [
    "momentGW",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise NotImplementedError",
    "raise util.ModelNotImplemented",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "cov_html"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
